# bevy_reactor

./: Cargo.toml  README.md  TODO.md
crates/bevy_mod_stylebuilder/: Cargo.toml  README.md
crates/bevy_mod_stylebuilder/src/: builder.rs  builder_background.rs  builder_border_color.rs  builder_border_radius.rs  builder_font.rs  builder_layout.rs  builder_outline.rs  builder_pointer_events.rs  builder_visibility.rs  builder_z_index.rs  lib.rs  style_builder.rs  style_commands.rs  style_params.rs  text_styles.rs
crates/bevy_picking_backdrop/: Cargo.toml
crates/bevy_picking_backdrop/src/: lib.rs
crates/bevy_reactor_builder/: Cargo.toml
crates/bevy_reactor_builder/src/: builder_setup_fns.rs  cond.rs  effect.rs  for_each.rs  for_index.rs  insert.rs  lib.rs  style.rs  switch.rs  test_condition.rs  text.rs  ui_builder.rs  ui_template.rs
crates/bevy_reactor_inspect/: Cargo.toml
crates/bevy_reactor_inspect/src/: inspector_panel.rs  lib.rs  panel.rs
crates/bevy_reactor_obsidian/: Cargo.toml
crates/bevy_reactor_obsidian/src/: cursor.rs  focus_signal.rs  hover_signal.rs  input_dispatch.rs  lib.rs  rounded_corners.rs  scrolling.rs  tab_navigation.rs  typography.rs
crates/bevy_reactor_obsidian/src/animation/: bistable_transition.rs  mod.rs
crates/bevy_reactor_obsidian/src/controls/: barrier.rs  button.rs  checkbox.rs  core_slider.rs  dialog.rs  disabled.rs  disclosure_toggle.rs  gradient_slider.rs  icon.rs  icon_button.rs  mod.rs  scrollview.rs  slider.rs  spacer.rs  spinbox.rs  splitter.rs  swatch.rs  swatch_grid.rs  toggle_state.rs  tool_palette.rs
crates/bevy_reactor_obsidian/src/materials/: gradient_rect.rs  slider_rect.rs  swatch_rect.rs
crates/bevy_reactor_overlays/: Cargo.toml
crates/bevy_reactor_overlays/src/: lib.rs  overlay.rs  overlay.wgsl  overlay_material.rs
crates/bevy_reactor_signals/: Cargo.toml
crates/bevy_reactor_signals/src/: adapter.rs  callback.rs  cx.rs  derived.rs  ecx.rs  lib.rs  mutable.rs  rcx.rs  reaction.rs  tracking_scope.rs
crates/bevy_reactor_views/: Cargo.toml
crates/bevy_reactor_views/src/: cond.rs  effect.rs  element.rs  empty.rs  lib.rs  style.rs  switch.rs  text.rs  vcx.rs  view.rs  view_template.rs
crates/obsidian_ui/: Cargo.toml
crates/obsidian_ui/assets/shaders/: dot_grid.wgsl  gradient_rect.wgsl  rounded_rect.wgsl
crates/obsidian_ui/src/: colors.rs  cursor.rs  floating.rs  focus.rs  lib.rs  rounded_rect.rs  scrolling.rs  size.rs  typography.rs  viewport.rs
crates/obsidian_ui/src/animation/: mod.rs
crates/obsidian_ui/src/controls/: button.rs  checkbox.rs  dialog.rs  disclosure_toggle.rs  gradient_slider.rs  icon.rs  icon_button.rs  inspector.rs  inspector_group.rs  listview.rs  menu.rs  mod.rs  node_graph.rs  scrollview.rs  slider.rs  spacer.rs  spinbox.rs  splitter.rs  swatch.rs  swatch_grid.rs  text_input.rs  tool_palette.rs
crates/obsidian_ui/src/hooks/: bistable_transition.rs  element_rect.rs  focus_signal.rs  mod.rs
crates/obsidian_ui/src/materials/: draw_path.rs  gradient_rect.rs  mod.rs  rounded_rect.rs
crates/obsidian_ui/src/overlays/: mod.rs  overlay.rs  overlay_material.rs  shape_builder.rs
crates/obsidian_ui_inspect/: Cargo.toml
crates/obsidian_ui_inspect/src/: default_factory.rs  edit_bool.rs  edit_color.rs  edit_fallback.rs  field_label.rs  inspectable.rs  inspector.rs  inspector_factory.rs  lib.rs
crates/obsidian_ui_inspect/src/editors/: bool.rs  color.rs  f32.rs  fallback.rs  list.rs  mod.rs  vec3.rs
crates/obsidian_ui_inspect/src/inspectors/: bool.rs  color.rs  enum.rs  f32.rs  fallback.rs  list.rs  mod.rs  struct.rs  tuple_struct.rs  vec3.rs
crates/obsidian_ui_inspect/src/templates/: color_edit.rs  field_label.rs  field_readonly_value.rs  inspector_panel.rs
examples/: animate.rs  builder.rs  buttons.rs  controls.rs  inspector.rs  iter.rs  markdown.rs  scroll.rs  simple.rs  simple2.rs  stateful.rs
examples/complex/: color_edit.rs  main.rs  node_graph_demo.rs  reflect_demo.rs  transform_overlay.rs
src/: accessor.rs  bundle.rs  callback.rs  compositor.rs  cond.rs  cx.rs  derived.rs  dynamic.rs  dynamic_keyed.rs  effect_target.rs  element.rs  element_effect.rs  for.rs  for_each.rs  for_index.rs  fragment.rs  hover.rs  lib.rs  mutable.rs  node_span.rs  parent_view.rs  plugin.rs  portal.rs  presenter.rs  reaction.rs  scope.rs  signal.rs  style.rs  switch.rs  text.rs  tracking_scope.rs  view.rs  view_children.rs  view_tuple.rs  with_styles.rs
src/style/: atlas_loader.rs  builder.rs  builder_background.rs  builder_font.rs  builder_layout.rs  builder_pointer_events.rs  builder_texture_atlas.rs  mod.rs
