[package]
name = "bevy_reactor"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
members = ["crates/*"]

[workspace.dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git" }
bevy_reactor_signals = { path = "crates/bevy_reactor_signals" }
bevy_mod_picking = { git = "https://github.com/tychedelia/bevy_mod_picking" }
bevy_mod_stylebuilder = { path = "crates/bevy_mod_stylebuilder" }

[dependencies]
bevy = { workspace = true }
bevy_reactor_signals = { workspace = true }
bevy_mod_stylebuilder = { workspace = true }
# bevy = "0.13.2"
bevy_mod_picking = "0.18"
impl-trait-for-tuples = "0.2.2"
smallvec = "1.13.2"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
obsidian_ui = { path = "crates/obsidian_ui" }
obsidian_ui_inspect = { path = "crates/obsidian_ui_inspect" }
bevy_reactor_overlays = { path = "crates/bevy_reactor_overlays" }
bevy_picking_backdrop = { path = "crates/bevy_picking_backdrop" }

[patch.crates-io]
bevy_mod_picking = { git = "https://github.com/tychedelia/bevy_mod_picking" }
bevy_eventlistener = { git = "https://github.com/tychedelia/bevy_eventlistener" }
bevy_picking_core = { git = "https://github.com/tychedelia/bevy_mod_picking" }
bevy = { git = "https://github.com/bevyengine/bevy.git" }
bevy_ecs = { git = "https://github.com/bevyengine/bevy.git" }

[patch."https://github.com/tychedelia/bevy_mod_picking"]
bevy = { git = "https://github.com/bevyengine/bevy.git" }
bevy_eventlistener = { git = "https://github.com/tychedelia/bevy_eventlistener" }
bevy_ecs = { git = "https://github.com/bevyengine/bevy.git" }

[patch."https://github.com/tychedelia/bevy_eventlistener"]
bevy = { git = "https://github.com/bevyengine/bevy.git" }
bevy_ecs = { git = "https://github.com/bevyengine/bevy.git" }
