[package]
name = "bevy_picking_backdrop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_app = "0.13.1"
bevy_ecs = "0.13.1"
bevy_reflect = "0.13.1"
bevy_render = "0.13.1"
bevy_picking_core = "0.18.0"
