[package]
name = "bevy_picking_backdrop"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_app = { git = "https://github.com/bevyengine/bevy.git" }
bevy_ecs = { git = "https://github.com/bevyengine/bevy.git" }
bevy_reflect = { git = "https://github.com/bevyengine/bevy.git" }
bevy_render = { git = "https://github.com/bevyengine/bevy.git" }
bevy_picking_core = "0.18.0"
