[package]
name = "bevy_reactor_overlays"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.0"
bevy_color = { path = "../../../bevy_color" }
bevy_mod_picking = "0.18.0"
bevy_reactor = { path = "../.." }
